fix padding arrow en breadcrumb scrollbar

--- a/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_breadcrumb.scss
+++ b/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_breadcrumb.scss
@@ -4,8 +4,13 @@
   font-style: normal;
   font-weight: 600;
   margin: 0;
+  overflow: hidden;
+  overflow-x: scroll;
   padding: 14px 19px 12px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   width: 100%;
+
 
   > li + li:before {
     content: ' ';
