--- a/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_navbar.scss
+++ b/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_navbar.scss
@@ -55,7 +55,7 @@
   .closed.open .icon-angle {
     position: absolute;
     right: 15px;
-    padding: 6px 10px;
+    padding: 6px 6px;
     -webkit-transform: rotate(0deg);
     -ms-transform: rotate(0deg); // IE9 only
     transform: rotate(0deg);
